k8s/base/user-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edumatch
  labels:
    istio-injection: enabled
